using memory info to pick the memory limits for JVMs and jobs
git-svn-id: https://bsisvn.mayo.edu/main/projects/g/Genome_GPS/trunk@3662 8f329c14-d232-4f17-8684-7ee34322b8dc